syntax = "proto3";

package api.fleet;

option go_package="github.com/synerex/synerex_alpha/api/fleet";

message FleetService {
    message ShareRideSerivce {
        int32 capacity = 1;
        int32 occupied_seats = 2;
        int32 available_seats = 3;
        bool non_smoking = 4;
        int32 price_per_km = 5;
    }

    message DeliverSerivce {
        string item = 1;
        string unit = 2;
        int32 num = 3;
        int32 avail = 4;
        repeated int64 demand_ids = 5;
    }

    oneof fservice {
        ShareRideSerivce share_ride = 1;
        DeliverSerivce deliver = 2;
    }
}

message Fleet {
    message Coord {
        float lat = 1;
        float lon = 2;
    }

    int32 vehicle_id = 1;
    int32 status = 2;
    Coord coord = 3;
    float angle = 4;
    int32 speed = 5;
    repeated FleetService services = 6;
    repeated int32 demands = 7;
}
